proper typeid operator support

parser now also accepts expressions according to the spec alternatively to type-id's
expression parser associates the ::std::type_info type properly, hence code completion,
uses, etc. pp. work

lots of unit tests added as well

BUG: 207377