languages/cpp/parser/visitor.h
@@ -109,6 +109,7 @@ protected:
   virtual void visitWinDeclSpec(WinDeclSpecAST *) {}
   virtual void visitSignalSlotExpression(SignalSlotExpressionAST *) {}
   virtual void visitQPropertyDeclaration(QPropertyDeclarationAST *) {}
+  virtual void visitTypeIDOperator(TypeIDOperatorAST *) {}
 
 private:
   typedef void (Visitor::*visitor_fun_ptr)(AST *);
